package de.luca.baeck.java.graph.Edge.Interface;

public interface Edge<E> {

    public E getOrigin();

    public E getTarget();
    
}
