package de.luca.baeck.java.graph.Edge.Interface;

public interface WeightedEdge<E,T> extends Edge<E> {

    public T getWeight();
    
}
